--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     
     <script>
         // Slideshow variables
-        const backgroundGifs = ['background1.gif', 'background2.gif', 'background3.gif'];
+        const backgroundGifs = ['background1.gif', 'background2.gif', 'background3.gif', 'background4.gif', 'background5.gif'];
         let currentIndex = 0;
         
         // Initialize slideshow
